--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
+    "tone": "^15.0.4",
     "wouter": "^3.3.0"
   },
   "devDependencies": {
